--- a/build.gradle
+++ b/build.gradle
@@ -1,45 +1,62 @@
 buildscript {
-	ext {
-		springBootVersion = '1.5.4.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-		maven { url "https://repo.spring.io/snapshot" }
-		maven { url "https://repo.spring.io/milestone" }
-		maven { url "http://jack.zsdyzb.com:8081/repository/maven-public/"}
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+    ext {
+        springBootVersion = '1.5.4.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+        maven { url "https://repo.spring.io/snapshot" }
+        maven { url "https://repo.spring.io/milestone" }
+        maven { url"https://plugins.gradle.org/m2/"}
+        maven { url "http://jack.zsdyzb.com:8081/repository/maven-public/"}
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.3'
+    }
 }
 
+apply plugin: 'idea'
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: "com.google.protobuf"
 
 group = 'com.jack'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.7
 
 repositories {
-	mavenCentral()
-	maven { url "https://repo.spring.io/snapshot" }
-	maven { url "https://repo.spring.io/milestone" }
-	maven { url "http://jack.zsdyzb.com:8081/repository/maven-public/"}
+    mavenCentral()
+    maven { url "https://repo.spring.io/snapshot" }
+    maven { url "https://repo.spring.io/milestone" }
+    maven { url "http://jack.zsdyzb.com:8081/repository/maven-public/"}
 }
 
 
 dependencies {
 //	compile('org.springframework.boot:spring-boot-starter-activemq')
-//	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
-	compile('org.springframework.boot:spring-boot-starter-freemarker')
+	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
+    compile 'com.querydsl:querydsl-mongodb:4.1.4'
+    compile 'com.querydsl:querydsl-apt:4.1.4'
+    compile('org.springframework.boot:spring-boot-starter-freemarker')
 //	compile('org.springframework.kafka:spring-kafka')
 //	compile('org.springframework.boot:spring-boot-starter-mail')
-	compile('org.springframework.boot:spring-boot-starter-web')
+    compile 'org.springframework.boot:spring-boot-starter-amqp:1.5.9.RELEASE'
+    compile 'com.google.guava:guava:23.5-jre'
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    provided 'org.projectlombok:lombok:1.16.18'
+
+
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile 'org.apache.velocity:velocity-engine-core:2.0'
+
+    compile 'com.google.protobuf:protobuf-java:3.5.0'
+    compile group: 'com.googlecode.protobuf-java-format', name: 'protobuf-java-format', version: '1.4'
+
 
 //    数据库配置 start
-	compile('com.baomidou:mybatis-plus:2.1.5')
+    compile('com.baomidou:mybatis-plus:2.1.5')
     compile('com.zaxxer:HikariCP-java7:2.4.13')
     compile('com.baomidou:mybatisplus-spring-boot-starter:1.0.5'){
         exclude module: 'tomcat-jdbc'
@@ -51,3 +68,31 @@ dependencies {
     testCompile('org.springframework.boot:spring-boot-starter-test')
 
 }
+
+sourceSets {
+    main {
+        proto {
+            // In addition to the default 'src/main/proto'
+            srcDir 'src/main/protoc'
+            // In addition to the default '**/*.proto' (use with caution).
+            // Using an extension other than 'proto' is NOT recommended,
+            // because when proto files are published along with class files, we can
+            // only tell the type of a file from its extension.
+        }
+    }
+}
+
+
+protobuf {
+    protoc {
+        // You still need protoc like in the non-Android case
+        artifact = 'com.google.protobuf:protoc:3.0.0'
+    }
+    generatedFilesBaseDir = "$projectDir/src"
+}
+
+clean {
+    delete protobuf.generatedFilesBaseDir
+}
+
+
